@@ -5,25 +5,27 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { Selection as NativeSelection, HTMLElement, Node, Range, Element, ClientRect, Window } from '@ephox/dom-globals';
+import { ClientRect, Element, HTMLElement, Node as DomNode, Range, Selection as NativeSelection, Window } from '@ephox/dom-globals';
 import { Compare, Element as SugarElement } from '@ephox/sugar';
-import Env from '../Env';
-import BookmarkManager from './BookmarkManager';
+import { Bookmark } from '../../bookmark/BookmarkTypes';
 import CaretPosition from '../../caret/CaretPosition';
-import ControlSelection from './ControlSelection';
 import * as NodeType from '../../dom/NodeType';
 import * as ScrollIntoView from '../../dom/ScrollIntoView';
 import * as EditorFocus from '../../focus/EditorFocus';
 import * as CaretRangeFromPoint from '../../selection/CaretRangeFromPoint';
+import * as ElementSelection from '../../selection/ElementSelection';
 import * as EventProcessRanges from '../../selection/EventProcessRanges';
 import * as GetSelectionContent from '../../selection/GetSelectionContent';
 import * as MultiRange from '../../selection/MultiRange';
 import * as NormalizeRange from '../../selection/NormalizeRange';
 import * as SelectionBookmark from '../../selection/SelectionBookmark';
+import { hasAnyRanges, moveEndPoint } from '../../selection/SelectionUtils';
 import * as SetSelectionContent from '../../selection/SetSelectionContent';
-import * as ElementSelection from '../../selection/ElementSelection';
-import { moveEndPoint, hasAnyRanges } from '../../selection/SelectionUtils';
 import Editor from '../Editor';
+import Env from '../Env';
+import Node from '../html/Node';
+import BookmarkManager from './BookmarkManager';
+import ControlSelection from './ControlSelection';
 import DOMUtils from './DOMUtils';
 import SelectorChanged from './SelectorChanged';
 import Serializer from './Serializer';
@@ -40,7 +42,7 @@ import Serializer from './Serializer';
 
 const isNativeIeSelection = (rng: any): boolean => !!(rng).select;
 
-const isAttachedToDom = function (node: Node): boolean {
+const isAttachedToDom = function (node: DomNode): boolean {
   return !!(node && node.ownerDocument) && Compare.contains(SugarElement.fromDom(node.ownerDocument), SugarElement.fromDom(node));
 };
 
@@ -62,12 +64,13 @@ interface Selection {
   serializer: Serializer;
   editor: Editor;
   collapse: (toStart?: boolean) => void;
-  setCursorLocation: (node?: Node, offset?: number) => void;
-  getContent: (args?: any) => any;
-  setContent: (content: any, args?: any) => void;
-  getBookmark: (type?: number, normalized?: boolean) => any;
-  moveToBookmark: (bookmark: any) => boolean;
-  select: (node: Node, content?: boolean) => Node;
+  setCursorLocation: (node?: DomNode, offset?: number) => void;
+  getContent (args: { format: 'tree' } & GetSelectionContent.GetSelectionContentArgs): Node;
+  getContent (args?: GetSelectionContent.GetSelectionContentArgs): string;
+  setContent: (content: string, args?: SetSelectionContent.SelectionSetContentArgs) => void;
+  getBookmark: (type?: number, normalized?: boolean) => Bookmark;
+  moveToBookmark: (bookmark: Bookmark) => boolean;
+  select: (node: DomNode, content?: boolean) => DomNode;
   isCollapsed: () => boolean;
   isForward: () => boolean;
   setNode: (elm: Element) => Element;
@@ -80,12 +83,12 @@ interface Selection {
   getSelectedBlocks: (startElm?: Element, endElm?: Element) => Element[];
   normalize: () => Range;
   selectorChanged: (selector: string, callback: (active: boolean, args: {
-    node: Node;
+    node: DomNode;
     selector: String;
     parents: Element[];
   }) => void) => Selection;
   selectorChangedWithUnbind: (selector: string, callback: (active: boolean, args: {
-    node: Node;
+    node: DomNode;
     selector: String;
     parents: Element[];
   }) => void) => { unbind: () => void };
@@ -122,7 +125,7 @@ const Selection = function (dom: DOMUtils, win: Window, serializer: Serializer, 
    * @param {Node} node Optional node to put the cursor in.
    * @param {Number} offset Optional offset from the start of the node to put the cursor at.
    */
-  const setCursorLocation = (node?: Node, offset?: number) => {
+  const setCursorLocation = (node?: DomNode, offset?: number) => {
     const rng = dom.createRng();
 
     if (!node) {
@@ -149,7 +152,7 @@ const Selection = function (dom: DOMUtils, win: Window, serializer: Serializer, 
    * // Alerts the currently selected contents as plain text
    * alert(tinymce.activeEditor.selection.getContent({format: 'text'}));
    */
-  const getContent = (args) => GetSelectionContent.getContent(editor, args);
+  const getContent = (args?: GetSelectionContent.GetSelectionContentArgs): any => GetSelectionContent.getContent(editor, args);
 
   /**
    * Sets the current selection to the specified content. If any contents is selected it will be replaced
@@ -163,7 +166,7 @@ const Selection = function (dom: DOMUtils, win: Window, serializer: Serializer, 
    * // Inserts some HTML contents at the current selection
    * tinymce.activeEditor.selection.setContent('<strong>Some contents</strong>');
    */
-  const setContent = (content, args?) => SetSelectionContent.setContent(editor, content, args);
+  const setContent = (content: string, args?: SetSelectionContent.SelectionSetContentArgs) => SetSelectionContent.setContent(editor, content, args);
 
   /**
    * Returns the start element of a selection range. If the start is in a text
@@ -219,7 +222,7 @@ const Selection = function (dom: DOMUtils, win: Window, serializer: Serializer, 
    * // Restore the selection bookmark
    * tinymce.activeEditor.selection.moveToBookmark(bm);
    */
-  const moveToBookmark = (bookmark): boolean => bookmarkManager.moveToBookmark(bookmark);
+  const moveToBookmark = (bookmark: Bookmark): boolean => bookmarkManager.moveToBookmark(bookmark);
 
   /**
    * Selects the specified element. This will place the start and end of the selection range around the element.
@@ -232,7 +235,7 @@ const Selection = function (dom: DOMUtils, win: Window, serializer: Serializer, 
    * // Select the first paragraph in the active editor
    * tinymce.activeEditor.selection.select(tinymce.activeEditor.dom.select('p')[0]);
    */
-  const select = (node: Node, content?: boolean) => {
+  const select = (node: DomNode, content?: boolean) => {
     ElementSelection.select(dom, node, content).each(setRng);
     return node;
   };
@@ -519,7 +522,7 @@ const Selection = function (dom: DOMUtils, win: Window, serializer: Serializer, 
    * @param {String} selector CSS selector to check for.
    * @param {function} callback Callback with state and args when the selector is matches or not.
    */
-  const selectorChanged = (selector: string, callback: (active: boolean, args: { node: Node; selector: String; parents: Element[] }) => void) => {
+  const selectorChanged = (selector: string, callback: (active: boolean, args: { node: DomNode; selector: String; parents: Element[] }) => void) => {
     selectorChangedWithUnbind(selector, callback);
     return exports;
   };
@@ -553,7 +556,7 @@ const Selection = function (dom: DOMUtils, win: Window, serializer: Serializer, 
     controlSelection.destroy();
   };
 
-  const exports = {
+  const exports: Selection = {
     bookmarkManager: null,
     controlSelection: null,
     dom,
